Moving 2d curves can flip shading normals #51350

Closed
opened 2017-04-29 16:26:58 +02:00 by Campbell Barton · 9 comments

Simply moving a 2d curve (in edit-mode or using a shape-key) may flip its normals.

In the attached file play the animation and notice the shape-key flips the normals to those matching the 2 planes where the normals each point in different directions.

Note that this only seems to impact the shaded normal, not the face winding since the faces don't vanish when backface culling is enabled.

2d_curve_flip_bug.blend

Simply moving a 2d curve (in edit-mode or using a shape-key) may flip its normals. In the attached file play the animation and notice the shape-key flips the normals to those matching the 2 planes where the normals each point in different directions. Note that this only seems to impact the shaded normal, not the face winding since the faces don't vanish when backface culling is enabled. [2d_curve_flip_bug.blend](https://archive.blender.org/developer/F580355/2d_curve_flip_bug.blend)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Campbell Barton changed title from Moving 2d curves may flip their normals to Moving 2d curves can flip shading normals 2017-05-01 07:43:58 +02:00

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo

Confirmed.
Shading inversion seems to be for solid viewport shading, and rendered viewport shading sees no change.

Confirmed. Shading inversion seems to be for solid viewport shading, and rendered viewport shading sees no change.
Member

Added subscriber: @SebastianWitt

Added subscriber: @SebastianWitt
Member

It seems like your curve is not 2D. Normally curves get flattened when switching from 3D to 2D.
Contrary to that, if a curve contains Shapekeys, the keys do not get flattened.

This results in unexpected behaviour like flipping normals because the shape is not 2D but 3D.
Should Shapekeys be flattened when switching to 2D?

It seems like your curve is not 2D. Normally curves get flattened when switching from 3D to 2D. Contrary to that, if a curve contains Shapekeys, the keys do not get flattened. This results in unexpected behaviour like flipping normals because the shape is not 2D but 3D. Should Shapekeys be flattened when switching to 2D?

This issue was referenced by f78ba0df02

This issue was referenced by f78ba0df02a9734740d7ccddbe315020f56852f6
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Owner

@SebastianWitt, thanks for finding the cause (Z values in 2D curve), committed fix - no longer checks Z values.

@SebastianWitt, thanks for finding the cause (Z values in 2D curve), committed fix - no longer checks Z values.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51350
No description provided.